# libCBDetect

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
include/: board_energy.h  boards_from_corners.h  create_correlation_patch.h  filter_board.h  filter_corners.h  find_corners.h  find_modes_meanshift.h  get_image_patch.h  get_init_location.h  grow_board.h  image_normalization_and_gradients.h  init_board.h  non_maximum_suppression.h  plot_boards.h  plot_corners.h  polynomial_fit.h  refine_corners.h  score_corners.h  weight_mask.h
src/: Checkerboard.cpp  bindings.cpp  boards_from_corners.cc  create_correlation_patch.cc  filter_board.cc  find_corners.cc  get_init_location.cc  grow_board.cc  plot_boards.cc  plot_corners.cc  refine_corners.cc
src/libCBDetect/: __init__.py
